Added file comparison operators.

--- a/bash-scripting-guide/04.condition-operators.md
+++ b/bash-scripting-guide/04.condition-operators.md
@@ -1,5 +1,6 @@
 ## Logical operators:
 && (AND)
+|| (OR)
 ! (NOT)
 <br></br>
 
@@ -32,3 +33,13 @@ Must use [[]] when using the operators below:
 < (compares alphabetic order, true if LHS comes first)
 
 '>' (simiar to previous operator, true if RHS comes first)
+<br></br>
+
+## File comparison operators:
+-e (Checks if a file exists)
+
+-d (Checks if a directory exists)
+
+-f (Checks if a file is a regular file)
+
+-s (Checks if a file is not empty)
